objects/SurveyInvitation.object
<CustomObject>
    <fields>
        <fullName>AW_CommunityURL__c</fullName>
        <description>To store community url from custom metadata.</description>
        <label>Community URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Email__c</fullName>
        <description>Email of the Recipient</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AW_HostName__c</fullName>
        <description>The field contains data such as the name of the host responsible for sending out the survey invitations</description>
        <formula>LEFT($Api.Partner_Server_URL_430, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_430))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Name</label>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>